Working DMG and running App